--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>asd</groupId>
-    <artifactId>asd</artifactId>
+    <groupId>ru.dijkstra</groupId>
+    <artifactId>dijkstra</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -25,6 +25,5 @@
             <version>3.4</version>
         </dependency>
     </dependencies>
-
 
 </project>
