--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>jgrapht-ext</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.softsmithy.lib</groupId>
+            <artifactId>softsmithy-lib-core</artifactId>
+            <version>0.2</version>
+        </dependency>
     </dependencies>
 
 </project>
